Changes: - Fixed spacing between Hébergements and Activités links

--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,13 @@ a {
 header {
     display: flex;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     justify-content: space-between;
 }
 
 .logo-header {
-    align-items: center;
-    padding: 20px 0 20px 0;
+    align-self: center;
+    padding: 30px 50px 30px 0;
 }
 
 .logo-header img {
@@ -79,6 +79,7 @@ header {
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 68px;
 }
 
 .link-nav {
